@@ -1,5 +1,7 @@
 2019-05-02  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/parallel/settings.h: Fix Doxygen markup.
+
 	* include/ext/pb_ds/detail/bin_search_tree_/*_imps.hpp: Do not define
 	anything unless PB_DS_CLASS_C_DEC is defined.
 	* include/ext/pb_ds/detail/binary_heap_/*_imps.hpp: Likewise.
